--- a/_posts/2025-03-28-NASA_P1.md
+++ b/_posts/2025-03-28-NASA_P1.md
@@ -16,12 +16,19 @@ tags:
   - deep learning
 ---
 
-_This is Part 1 of a two-part series on crater detection using deep learning. [Read Part 2 →]((https://anekha.github.io/deep-learning/2025-03-28-NASA_P2.md)_   
+_This is Part 1 of a two-part series on crater detection using deep learning. [Read Part 2 →](https://anekha.github.io/deep-learning/2025-03-28-NASA_P2.md)_   
 
 📺 **Watch a 1-minute project summary:**
 
-<div style="text-align: center;">
-  <iframe width="100%" height="400" src="https://www.youtube.com/embed/5sAfHHuAaLE?si=Jqw0OIvaw-Hfthlq" title="NASA Crater Detection Summary" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 8px;"></iframe>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px; margin-bottom: 1.5rem;">
+  <iframe 
+    src="https://www.youtube.com/embed/5sAfHHuAaLE?si=Jqw0OIvaw-Hfthlq" 
+    title="NASA Crater Detection Summary"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 8px;">
+  </iframe>
 </div>
 
 ## Introduction 🚀
@@ -142,7 +149,7 @@ We use **Intersection over Union (IoU)** and **Average Precision (AP)** from PR 
 - Tiling (512×512) significantly improved detection
 - Trained for 40 epochs, batch size 32
 
-<img src="/assets/projects/NASA/ellipse-rcnn-tiling.png" style="width:49%; display:inline-block;">
+<img src="/assets/projects/NASA/ellipse_rcnn_tiling.png" style="width:49%; display:inline-block;">
 <img src="/assets/projects/NASA/ellipse_rcnn_tiling_results.png" style="width:49%; display:inline-block;">
 
 **Results (on hold-out 100 images):**
