--- a/_posts/2025-03-28-NASA_P2.md
+++ b/_posts/2025-03-28-NASA_P2.md
@@ -1,5 +1,5 @@
 ---
-title: "Part 1: NASA Crater Detection"
+title: "Part 2: NASA Crater Detection"
 excerpt: "Mid-project update: crater detection on the Moon using YOLOv10 and Ellipse R-CNN"
 date: 2025-03-28
 layout: single
@@ -16,157 +16,108 @@ tags:
   - deep learning
 ---
 
-_This is Part 1 of a two-part series on crater detection using deep learning. [Read Part 2 →](#)_   
+_This is Part 2 of a two-part series on crater detection using deep learning. [Missed Part 1? Catch up here →](https://anekha.github.io/deep-learning/2025/03/28/NASA.html)_
 
-## Introduction 🚀
+## 🚀 Overview
 
-<img src="/assets/projects/NASA/space.png" style="width:100%; border-radius: 8px;" alt="Lunar Navigation">
+In Part 1, we built a **YOLOv10 + Ellipse R-CNN** pipeline to detect and localize lunar craters.
 
-As cislunar space grows increasingly crowded, spacecraft face heightened risks during navigation. Traditionally, space missions rely on Earth-based communication to determine their location. But what happens when communication is lost?
-
-To solve this, NASA is developing **TRON** (Target & Range-adaptive Optical Navigation) — a next-gen system that allows spacecraft to determine their position independently, without Earth’s help.
-
-TRON uses two methods:
-1. **Planetary Triangulation** for long-range navigation by measuring angles between celestial bodies.
-2. **Crater-Based Localization** for close-range navigation by detecting and matching craters seen in images with pre-mapped craters on the lunar surface.
-
-This project focuses on **crater detection** — a key component of crater-based localization. Accurate crater recognition helps spacecraft understand their exact position, enabling autonomous operation in deep space.
+This post focuses on:
+- 🌀 Rim-fitting using Ellipse R-CNN  
+- 📊 Evaluation metrics and precision challenges  
+- ⚙️ System integration and resource constraints  
+- 🔍 Final takeaways and next steps
 
 ---
 
-## Project Objective 🌕
+📺 **Watch a 1-minute summary of the project:**
 
-The goal is to build a system that automatically detects lunar craters in spacecraft images and fits an **ellipse** around each crater’s rim.
-
-This is challenging due to:
-
-- **Visual complexity**: Craters vary in size, lighting, and visibility.
-- **Hardware constraints**: Must run on CPU (no GPU), under 20s per 5MP image, < 4GB RAM (like a Raspberry Pi 5).
-
-These demand **fast, lightweight deep learning models** that can handle real-world noise and variability.
-
----
-
-## Literature Review 🧠
-
-Early crater detection used edge detection and hand-crafted features, but struggled with shape and lighting variations.
-
-Modern deep learning approaches:
-- **Single-stage** (e.g., YOLO, SSD) for speed.
-- **Two-stage** (e.g., Faster R-CNN, Mask R-CNN) for precision.
-
-We compare:
-- **YOLOv10**: Fast, efficient real-time bounding box detector.
-- **Ellipse R-CNN**: Detects and fits elliptical shapes to crater rims.
-
----
-
-## Dataset 📸
-
-We used a synthetic lunar crater dataset developed by NASA (via the Boromir engine), based on the crater catalog by Robbins (2019).
-
-### 🗂️ Composition:
-- 1,000 grayscale images (2592×2048 px)
-- Paired JSON metadata: camera pose, sun angle, etc.
-- Dual label formats: YOLO (bounding boxes) & EllipseRCNN (elliptical params)
-
-<div style="display:flex; gap:10px;">
-  <img src="/assets/projects/NASA/dataset_variables.png" width="48%">
-  <img src="/assets/projects/NASA/ex_img.png" width="48%">
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px; margin-bottom: 1.5rem;">
+  <iframe 
+    src="https://www.youtube.com/embed/5sAfHHuAaLE?si=Jqw0OIvaw-Hfthlq" 
+    title="NASA Crater Detection Summary"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 8px;">
+  </iframe>
 </div>
 
-### 🖼️ Dataset Preview
-
-![Example Frames](/assets/projects/NASA/dataset_preview.gif)
+---
 
 
-### ⚠️ Challenges & Fixes
-- Misaligned masks from auto-generation
+## 🧠 From Boxes to Rims: LunarLens Pipeline
 
-<div style="display:flex; gap:10px;">
-  <img src="/assets/projects/NASA/ellipse_masks_initial.png" width="48%">
-  <img src="/assets/projects/NASA/ellipse_masks_post.png" width="48%">
-</div>
+Our two-stage detection system — **LunarLens** — works like this:
 
-- Extensive manual refinement using Label Studio
+1. **YOLOv10** detects crater bounding boxes quickly.  
+2. **Ellipse R-CNN** then fits an ellipse to the rim of each crater.
 
-<div style="display:flex; gap:10px;">
-  <img src="/assets/projects/NASA/manual_annotations_initial.png" width="48%">
-  <img src="/assets/projects/NASA/manual_annotations_post.png" width="48%">
-</div>
+This hybrid system balances speed with shape accuracy, ideal for autonomous space navigation.
 
-- Ellipses converted to bounding boxes for YOLO
-
-<p style="text-align:center;"><img src="/assets/projects/NASA/bounding_boxes.png" width="70%"></p>
+![LunarLens Pipeline](/assets/projects/NASA/lunarlens_pipeline.png){: .center-image }
 
 ---
 
-## 4. Experiments
+## 🌀 Postprocessing with Ellipse R-CNN
 
-### 🧪 Train/Test Split:
-80/20 for both models 
+Bounding boxes from YOLOv10 are cropped and passed to Ellipse R-CNN, which predicts:
 
-### Evaluation Metrics
+- (x, y) center  
+- Major & minor axes  
+- Orientation  
 
-We use **Intersection over Union (IoU)** and **Average Precision (AP)** from PR curves to assess model accuracy and ranking.
+This gives us a mathematically accurate rim outline.
 
-<img src="/assets/projects/NASA/evaluation_metrics.png" style="width:70%; margin: 0 auto; display: block;" alt="IoU Metric">
+```text
+Crater 1: (100.3, 40.8), (101.5, 39.6), ...
+Crater 2: (463.2, 80.9), (462.3, 81.4), ...
+```
 
----
+## 📊 Evaluation & Metrics
 
-### YOLOv10 📦
+We assessed detection quality at **IoU thresholds of 50% and 70%**, using AP, precision, and recall.
 
-- Model: `YOLOv10m` (mid-sized, balance of speed/accuracy)
-- Trained for 100 epochs using Ultralytics
-- Images resized to 640×640
+| Metric    | IoU = 50 | IoU = 70 |
+|-----------|----------|----------|
+| AP        | 0.111    | 0.003    |
+| Recall    | 0.145    | 0.010    |
+| Precision | 0.337    | 0.042    |
 
-**Results:**
-- Precision: **65%**
-- Recall: **51%**
-- mAP@0.5: **57%**
-- COCO-style mAP (0.5–0.95): **34%**
+🧠 **Key takeaway**: Precision drops sharply at high IoU — highlighting how tight rim localization is the hard part, not detection.
 
-<img src="/assets/projects/NASA/yolov10_initialresults.png" style="width:80%; margin: 0 auto;" alt="YOLO Results">
+## 🧪 System Performance Under Constraints
 
----
+We were tasked with running this system on **CPU-only hardware** with Raspberry Pi–level specs.
 
-### Ellipse R-CNN 🌀
-
-- Backbone frozen, trained only on proposal, regression & occlusion modules
-- Tiling (512×512) significantly improved detection
-- Trained for 40 epochs, batch size 32
-
-<div style="display:flex; gap:10px;">
-  <img src="/assets/projects/NASA/ellipse_rcnn_wholeimage_initial.png" width="48%">
-  <img src="/assets/projects/NASA/ellipse_rcnn_wholeimage_results.png" width="48%">
-</div>
-
-**Results (on hold-out 100 images):**
-- mAP@0.5: **17.2%**
-- mAP@0.7: **9.9%**
-
-<img src="/assets/projects/NASA/ellipse-rcnn-tiling.png" style="width:49%; display:inline-block;">
-<img src="/assets/projects/NASA/ellipse_rcnn_tiling_results.png" style="width:49%; display:inline-block;">
+| Constraint   | Result           |
+|--------------|------------------|
+| Image Size   | 5 MP             |
+| Runtime      | ~20 sec / image  |
+| RAM          | < 4 GB           |
+| Hardware     | No GPU           |
 
 ---
 
-## 5. Next Steps 🧭
+## 🔍 Final Thoughts & Next Steps
 
-### 🔄 Evaluation Alignment
-Define **consistent dataset splits** across YOLO and EllipseRCNN to ensure fair model comparison.
+- ✅ **YOLOv10** was great for rapid detection, but rim precision required postprocessing.  
+- ✅ **Ellipse R-CNN** helped convert detections into usable geometric inputs.  
+- ⚠️ Evaluation at high IoU exposed the need for better shape-fit training.
 
-<img src="/assets/projects/NASA/datasciencepipeline_midterm.png" style="width:80%; margin: 0 auto;" alt="Pipeline Diagram">
-
-### 🔧 EllipseRCNN
-- Apply **tiling during training**
-- Explore optimizers, learning schedules
-- Address patch edge inference issues
-
-### ⚙️ YOLOv10
-- Use full 1000-image dataset
-- Add tiling + augmentation
-- Train for 300 epochs
-- Try larger YOLOv10 variants
-- Apply same eval metrics as EllipseRCNN
+**Next steps:**
+- Fine-tune Ellipse R-CNN on lunar tile crops  
+- Apply weighted evaluation based on crater size  
+- Improve YOLO thresholding and ensemble strategies  
 
 ---
+
+## 🤝 Acknowledgments
+
+Built by: **Anekha Sokhal, Tian Le, Henry Tran, Juan Hevia, Madeleine Harrell, Jeremy Xu**  
+Mentored by: **Kyle Smith (NASA), Arko Barman, Ananya Muguli**
+
+---
+
+💬 _Have questions, or want to explore vision systems for autonomous spacecraft?_  
+**Feel free to reach out — I’d love to chat!**
